--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -10,7 +10,7 @@
             <input type="text" id="title" name="title" placeholder="Title" value="{{ event.title}}">
             <label for="description" data-i18n="event.description">Event description</label>
             <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about..">{{ event.description}}</textarea>
-            <label for="date" data-i18n="event.data">Event date</label>
+            <label for="date" data-i18n="event.date">Event date</label>
             <input type="date" id="date" name="date" placeholder="Date" value="{{ event.date}}">
             <label for="language" data-i18n="event.language">Event language</label>
             <select class="ui search selection dropdown" name="language" id="event-language">
