Dutch translations Event routes

--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -22,7 +22,7 @@
             <input type="file" name="picture">
         </div>
         </br>
-        <h3 data-i18n="event.address">Address</h3>
+        <h3 data-i18n="event.location">Location</h3>
         <div class="form-group">
             <label for="country" data-i18n="event.country">Country</label>
             <select class="ui search selection dropdown" name="country" id="user-country" placeholder="Country">
