--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -3,7 +3,7 @@
 <div class="flex-column-center event">
   <div class="flex-column">
     <div class="flex-column">
-      <button class="white-btn" id="back" data-i18n="event.back">Back to my events</button>
+      <button class="white-btn" id="back" data-i18n="event.back">Back to My Events</button>
       <div class="flex-row">
         <div class="tile-image">
           <img src="{{event.picture}}" alt="event picture">
@@ -37,7 +37,8 @@
 
     <div class="info-wrapper">
       <p data-i18n="event.location">Location:</p>
-      <p>{{#if event.location.city}}{{event.location.city}}, {{/if}}{{event.location.country}}{{#if event.location.street}},</br>{{event.location.street}}</p>{{/if}}
+      <p>{{#if event.location.city}}{{event.location.city}}, {{/if}}{{event.location.country}}{{#if
+        event.location.street}},</br>{{event.location.street}}</p>{{/if}}
       <p data-i18n="event.language">Language:</p>
       <p>{{event.language}}</p>
       <p data-i18n="event.date">Date:</p>
