--- a/views/events/new.hbs
+++ b/views/events/new.hbs
@@ -8,7 +8,8 @@
             <label for="title" data-i18n="event.title">Event title</label>
             <input type="text" id="title" name="title" placeholder="Title" required>
             <label for="description" data-i18n="event.description">Event description</label>
-            <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about.." required></textarea>
+            <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about.."
+                required></textarea>
             <label for="date" data-i18n="event.date">Event date</label>
             <input type="date" id="date" name="date" placeholder="Date" required>
             <label for="language" data-i18n="event.language" required>Event language</label>
@@ -22,7 +23,7 @@
             <input type="file" name="picture">
         </div>
         </br>
-        <h3 data-i18n="event.address">Address</h3>
+        <h3 data-i18n="event.location">Location</h3>
         <div class="form-group">
             <label for="country" data-i18n="event.country">Country</label>
             <select class="ui search selection dropdown" name="country" id="user-country">
