added landing page and placeholder localisation

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -5,9 +5,9 @@
 
     <div class="form-group">
       <label for="email" data-i18n="auth.email">Email</label>
-      <input id="email" type="text" name="email" placeholder="jon@snow.com">
+      <input id="email" type="text" name="email" placeholder="someone@example.com">
       <label for="password" data-i18n="auth.password">Password</label>
-      <input id="password" type="password" name="password" placeholder="Your password">
+      <input id="password" type="password" name="password" placeholder="">
     </div>
 
     </br> {{#if message }}
