--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -7,13 +7,13 @@
       <label for="name" data-i18n="auth.name">Name:</label>
       <input type="text" name="name" placeholder="Name" value="" required>
       <label for="email" data-i18n="auth.email">E-mail address:</label>
-      <input type="text" name="email" placeholder="E-mail address" value="" required>
+      <input type="text" name="email" placeholder="someone@example.com" value="" required>
       <label for="Age" data-i18n="auth.age">Age:</label>
-      <input type="number" name="age" placeholder="Age" value="" required>
+      <input type="number" name="age" placeholder="" value="" required>
       <label for="description" data-i18n="auth.about">About me:</label>
-      <textarea rows="4" type="text" name="description" placeholder="Something about me.."></textarea>
+      <textarea rows="4" type="text" name="description" data-i18n="[placeholder]auth.aboutPlaceholder" placeholder="Something about me.."></textarea>
       <label for="password" data-i18n="auth.password">Password:</label>
-      <input id="password" type="password" name="password" placeholder="Your password" required>
+      <input id="password" type="password" name="password" placeholder="" required>
       <label for="picture" data-i18n="auth.profilePicture">Profile Picture</label>
       <input type="file" name="picture">
     </div>
@@ -37,7 +37,7 @@
         <option data-i18n="auth.country" value="">Country:</option>
       </select>
       <label data-i18n="auth.city" for="city">City:</label>
-      <input type="text" name="city" placeholder="City" value="">
+      <input type="text" name="city" placeholder="" value="">
     </div>
     </br>
 
