--- a/views/events/find.hbs
+++ b/views/events/find.hbs
@@ -1,6 +1,6 @@
 {{> navbar user}}
 
-<h2 data-i18n="event.findHeader">Find Events</h2>
+<h2 data-i18n="event.find">Find Events</h2>
 
 <div class="search-container">
     <div class="filter-container">
@@ -15,7 +15,7 @@
                     <option value="" data-i18n="event.country">Country</option>
                 </select>
                 <label for="city" data-i18n="event.city">City:</label>
-                <input type="text" name="city" placeholder="City" value="">
+                <input type="text" name="city" placeholder="" value="">
                 <label for="minDate" data-i18n="event.from">From:</label>
                 <input type="date" name="minDate">
                 <label for="maxDate" data-i18n="event.to">To:</label>
