--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,10 +2,10 @@
   <div class="content-wrapper">
     <img src="/images/temp-logo.png">
     <h1>{{title}}</h1>
-    <h2>Learn language easy</h2>
+    <h2 data-i18n="landing.subtitle">Learn language easy</h2>
     <div class="menu-container">
-      <button class="success-btn" id="login">Log in</button>
-      <button class="success-btn" id="signup">Create account</button>
+      <button class="success-btn" id="login" data-i18n="landing.login">Log in</button>
+      <button class="success-btn" id="signup" data-i18n="landing.signUp">Create account</button>
     </div>
   </div>
 </div>
